examples/test/testpolicy13809.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13809
  namespace: namespace437
spec:
  podSelector:
    matchLabels:
      key48: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value23
          key25: value43
          key2: value33
      podSelector:
        matchLabels:
          key41: value14
          key10: value38
